--- a/MyResumeWeb/src/styles/index.css
+++ b/MyResumeWeb/src/styles/index.css
@@ -25,7 +25,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  @media (max-width: 1024px) {
+  @media (max-width: 64em) {
     font-size: 16px;
   }
 }
@@ -64,6 +64,7 @@
 
 body {
   margin: 0;
+  background-color: #1a1a1a !important;
 }
 
 h1,
